// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders boxed 1`] = `
<Layout
  boxed={true}
  className="best-layout"
  onToggle={[Function]}
>
  <div />
</Layout>
`;

exports[`renders collapsed sidebar 1`] = `
<Layout
  className="best-layout"
  onToggle={[Function]}
  sidebarCollapsed={true}
>
  <div />
</Layout>
`;

exports[`renders default collapsed sidebar 1`] = `
<Layout
  className="best-layout"
  onToggle={[Function]}
  sidebarCollapsed={true}
>
  <div />
</Layout>
`;

exports[`renders empty 1`] = `
<Layout
  className="best-layout"
  onToggle={[Function]}
>
  <div />
</Layout>
`;

exports[`renders fixed 1`] = `
<Layout
  className="best-layout"
  fixed={true}
  onToggle={[Function]}
>
  <div />
</Layout>
`;

exports[`renders mini sidebar 1`] = `
<Layout
  className="best-layout"
  miniSidebar={true}
  onToggle={[Function]}
>
  <div />
</Layout>
`;

exports[`renders top navigation 1`] = `
<Layout
  className="best-layout"
  onToggle={[Function]}
  topNav={true}
>
  <div />
</Layout>
`;
